--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles/style.css">
     <script type = "module" src="/moduls/script.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <title>Yandex Maps</title>
 </head>
 <body>
@@ -13,15 +16,30 @@
         <div id="myModal" class="modal">
             <div class="modal-content">
                 <span class="close" onclick="closeModal()">&times;</span>
-                <h2 class="title">Модальное окно</h2>
+                <h2 class="title">Ин<link rel="preconnect" href="https://fonts.googleapis.com">
+                    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">формация о скидке</h2>
                 <p class="start-discount">Старт скидки: </p>
                 <p class="time-discount">Время действия скидки: </p>
             </div>
         </div>
-        <div id="map-id" class="map"></div>
-        <button class="create-placemark">Добавить метку</button>
-        <input type="text" placeholder="Текст метки" class="input2">
-        <input type="text" class="input" placeholder="Количество секунд">
+        <div id="map-id" class="map"></div>  
+        <button class="add-placemark" type="button">
+            <span class="button__text">Placemark</span>
+            <span class="button__icon"><svg class="svg" fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><line x1="12" x2="12" y1="5" y2="19"></line><line x1="5" x2="19" y1="12" y2="12"></line></svg></span>
+        </button>
+        <div id="myModal2" class="modal-placemark">
+            <div class="modal-content-placemark">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <h2 class="modal-placemark-title">Добавление метки</h2>
+                <input type="text" placeholder="Текст метки" class="input2">
+                <input type="text" class="input" placeholder="Количество секунд">
+                <button class="add-placemark2" data-text="Awesome">
+                    <span class="actual-text">&nbsp;Добавить&nbsp;</span>
+                    <span aria-hidden="true" class="hover-text">&nbsp;Добавить&nbsp;</span>
+                </button>
+            </div>
+        </div>
     </div>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=8ce7426e-419d-4d33-9356-cc3c0fabf315&lang=ru_RU" type="text/javascript">
     </script>
