create radio buttons

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                 </div>
                 <input type="text" placeholder="Описание скидки" class="input2">
                 <input type="text" class="input" placeholder="Количество секунд">
+                <label id = "myLabel" for = "radioButton">
+                    <input type="radio" class = "i-6" id = "radioButton" name = "rb1">
+                    <span id="myLabelText">На 1 раз</span>
+                </label>
+                <label id = "myLabel2" for = "radioButton2">
+                    <input type="radio" class = "i-6" id = "radioButton2" name = "rb1">
+                    <span id="myLabelText2">Периодически</span>
+                </label>
                 <button class="add-placemark2" data-text="Awesome">
                     <span class="actual-text">&nbsp;Добавить&nbsp;</span>
                     <span aria-hidden="true" class="hover-text">&nbsp;Добавить&nbsp;</span>
