--- a/index.html
+++ b/index.html
@@ -53,14 +53,25 @@
                 </div>
                 <input type="text" placeholder="Описание скидки" class="input2">
                     <label id = "myLabel" for = "radioButton">
-                        <input type="radio" class = "i-6" id = "radioButton" name = "rb1" checked>
+                        <input type="radio" id = "radioButton" name = "rb1" checked>
                         <span id="myLabelText">На 1 раз</span>
                     </label>
                     <label id = "myLabel2" for = "radioButton2">
-                        <input type="radio" class = "i-6" id = "radioButton2" name = "rb1">
+                        <input type="radio" id = "radioButton2" name = "rb1">
                         <span id="myLabelText2">Периодически</span>
                     </label>
                 <input type="time" class="input" placeholder="Количество секунд" id="time">
+                <input type="time" class ="input" placeholder="Время начала скидки" id="time-start">
+                <input type="time" class="input" placeholder="Время окончания скидки" id="time-end">
+                <select id="date-weekday" name="dropdown">
+                    <option value="option1">Понедельник</option>
+                    <option value="option2">Вторник</option>
+                    <option value="option3">Среда</option>
+                    <option value="option4">Четверг</option>
+                    <option value="option5">Пятница</option>
+                    <option value="option6">Суббота</option>
+                    <option value="option7">Воскресенье</option>    
+                </select>
                 <input type="date" class="input" id="date" placeholder="Дата окончания скидки">
                 <button class="add-placemark2" data-text="Awesome">
                     <span class="actual-text">&nbsp;Добавить&nbsp;</span>
