selecting and setting a marker for a specific day

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                 <input type="time" class ="input" placeholder="Время начала скидки" id="time-start">
                 <input type="time" class="input" placeholder="Время окончания скидки" id="time-end">
                 <select id="date-weekday" name="dropdown">
-                    <option value="option1">Понедельник</option>
-                    <option value="option2">Вторник</option>
-                    <option value="option3">Среда</option>
-                    <option value="option4">Четверг</option>
-                    <option value="option5">Пятница</option>
-                    <option value="option6">Суббота</option>
-                    <option value="option7">Воскресенье</option>    
+                    <option value="1">Понедельник</option>
+                    <option value="2">Вторник</option>
+                    <option value="3">Среда</option>
+                    <option value="4">Четверг</option>
+                    <option value="5">Пятница</option>
+                    <option value="6">Суббота</option>
+                    <option value="7">Воскресенье</option>    
                 </select>
                 <input type="date" class="input" id="date" placeholder="Дата окончания скидки">
                 <button class="add-placemark2" data-text="Awesome">
