--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="title-menu"><h1>MENU</h1></div>
     <div class="list_menu">
         <ul>
-            <li><a href="">Профиль</a></li>
+            <li><a href="/pages/profile.html">Профиль</a></li>
             <li><a href="">Настройки</a></li>
             <!-- <li><a href="">Уведомления</a></li> -->
             <li><a href="">Контакты</a></li>
