change design of modal window parse-placemarks

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
     <div class="container">
         <div id="myModal" class="modal">
-            <div class="modal-content">
+            <div class="modal-content-placemark">
                 <span class="close">&times;</span>
                 <h2 class="title">Информация о скидке</h2>
                 <p class="time-discount">Время действия скидки: </p>
